RESOLVED FIXED177840
RenderMultiColumnSpannerPlaceholder should not hold raw pointers.
https://bugs.webkit.org/show_bug.cgi?id=177840
Summary RenderMultiColumnSpannerPlaceholder should not hold raw pointers.
alan
Reported 2017-10-03 14:59:07 PDT
m_spanner and m_fragmentedFlow
Attachments
Patch (5.90 KB, patch)
2017-10-03 15:20 PDT, alan
no flags
Archive of layout-test-results from ews114 for mac-elcapitan (1.99 MB, application/zip)
2017-10-04 04:52 PDT, Build Bot
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-03 14:59:40 PDT
Radar WebKit Bug Importer
Comment 2 2017-10-03 14:59:41 PDT
alan
Comment 3 2017-10-03 15:20:07 PDT
Build Bot
Comment 4 2017-10-04 04:52:26 PDT
Comment on attachment 322593 [details] Patch Attachment 322593 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/4752290 New failing tests: workers/wasm-hashset.html
Build Bot
Comment 5 2017-10-04 04:52:27 PDT
Created attachment 322655 [details] Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 6 2017-10-04 07:14:17 PDT
Comment on attachment 322593 [details] Patch Clearing flags on attachment: 322593 Committed r222845: <http://trac.webkit.org/changeset/222845>
WebKit Commit Bot
Comment 7 2017-10-04 07:14:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.