RenderMultiColumnSpannerPlaceholder should not hold raw pointers. https://bugs.webkit.org/show_bug.cgi?id=177840 <rdar://problem/34800109>

Reviewed by Sam Weinig.

Though we should always have a spanner as long as there's a RenderMultiColumnSpannerPlaceholder,
the spanner inject/removal logic is complicated enough to protect them with WeakPtr.

Covered by existing tests.

* rendering/RenderMultiColumnSpannerPlaceholder.cpp:
(WebCore::RenderMultiColumnSpannerPlaceholder::RenderMultiColumnSpannerPlaceholder):
* rendering/RenderMultiColumnSpannerPlaceholder.h:


Canonical link: https://commits.webkit.org/194124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222845 268f45cc-cd09-0410-ab3c-d52691b4dbfc