Source/WebCore/rendering/RenderMultiColumnSpannerPlaceholder.h
@@ -37,23 +37,23 @@ class RenderMultiColumnFlow;
 
 class RenderMultiColumnSpannerPlaceholder final : public RenderBox {
 public:
-    static RenderPtr<RenderMultiColumnSpannerPlaceholder> createAnonymous(RenderMultiColumnFlow*, RenderBox& spanner, const RenderStyle* parentStyle);
+    static RenderPtr<RenderMultiColumnSpannerPlaceholder> createAnonymous(RenderMultiColumnFlow&, RenderBox& spanner, const RenderStyle& parentStyle);
 
-    RenderBox* spanner() const { return m_spanner; }
-    RenderMultiColumnFlow* fragmentedFlow() const { return m_fragmentedFlow; }
+    RenderBox* spanner() const { return m_spanner.get(); }
+    RenderMultiColumnFlow* fragmentedFlow() const { return m_fragmentedFlow.get(); }
 
 private:
     template<class T, class... Args> friend RenderPtr<T> createRenderer(Args&&...);
 
-    RenderMultiColumnSpannerPlaceholder(RenderMultiColumnFlow*, RenderBox& spanner, RenderStyle&&);
+    RenderMultiColumnSpannerPlaceholder(RenderMultiColumnFlow&, RenderBox& spanner, RenderStyle&&);
     bool isRenderMultiColumnSpannerPlaceholder() const override { return true; }
 
     bool canHaveChildren() const override { return false; }
     void paint(PaintInfo&, const LayoutPoint&) override { }
     const char* renderName() const override;
 
-    RenderBox* m_spanner;
-    RenderMultiColumnFlow* m_fragmentedFlow;
+    WeakPtr<RenderBox> m_spanner;
+    WeakPtr<RenderMultiColumnFlow> m_fragmentedFlow;
 };
 
 } // namespace WebCore
